# mines-nancy-optimization

./: .gitignore  .pre-commit-config.yaml  LICENSE  LW1.ipynb  README.md  commands.tex  exam_fall25.ipynb  lab-work.md  myst.yml  pyproject.toml  references.bib
.github/workflows/: ci.yml  deploy.yml
contents/chapter1/: 01-intro.md  02-introductory-example.md  03-vocabulary.md  04-general-form.md  05-local-global-optima.md  06-standard-opt-problems.md
contents/chapter2/: 01-intro.md  02-tools.md  03-existence.md  04-convexity.md  05-optimality-conditions.md  06-optimality-conditions-constrained.md
contents/chapter3/: 01-intro.md  02-first-example.md  03-general-form-LS.md  04-unconstrained-QP.md  05-back-to-LS.md
contents/chapter4/: 01-intro.md  02-gradient-free-optimization.md  03-general-principles-descent-methods.md  04-gradient-descent.md  05-newton-method.md  06-quasi-newton-method.md  07-nonlinear-ls.md  08-cv-vs-computation.md
contents/chapter5/: 01-intro.md  02-linear-cg.md  03-nonlinear-cg.md
contents/chapter6/: 01-intro.md  02-mathematical-toolbox.md  03-cv-gradient-descent.md  04-cv-newton-method.md  05-tradeoffs.md
contents/chapter7/: 01-intro.md  02-lagrangian-duality.md  03-kkt.md
contents/chapter8/: 01-intro.md  02-penalty-method.md  03-projected-gd.md  04-uzawa-method.md  05-cvxpy.md
contents/optima/: optima-intro.md  optima-math-tools.md
labs/: LW1.ipynb  LW2.ipynb  lab-work.md  mini-project-NMF.ipynb
