[project]
name = "mines-nancy-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter-book>=2.0.0a0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "palettable>=3.3.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.0",
]
